fix(applications-widget): pipeline build truncates too early

--- a/src/app/dashboard-widgets/applications-widget/applications-widget.component.less
+++ b/src/app/dashboard-widgets/applications-widget/applications-widget.component.less
@@ -18,6 +18,9 @@
         .list-view-pf-checkbox {
           border-right: transparent;
         }
+        .list-view-pf-description {
+          width: 100%;
+        }
         .list-group-item-heading {
           font-weight: 500;
         }
